Completed the full backend of the project, tested api using swagger linked in program.cs and through dependency injection service and controllers build api and connectd with database table

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     "DrcsDb": "Host=localhost;Port=5432;Database=DrcsDb;Username=postgres;Password=543215"
   },
-
+  "JWT": {
+    "Secret": "aVeryLongRandomStringForJWTSigning123!@#"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
